Spacing fixes
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/branches/3.5-TESTING@3425 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/html/NoAuth/css/forms.css
+++ b/html/NoAuth/css/forms.css
@@ -52,7 +52,7 @@ form input.button {
     background: white;
     font-weight: bold;
     font-size: 0.8em;
-    margin: 0.5em;
+    margin: 0.5em 0.5em 0 0.5em;
 }
 
 form input.button:active {
